test/bad/type_missmatch_09.mpp
var a:int;
var b:real;

print a < b;
